     colors)
   * Re-fogging does not occur in the middle of the player's turn.
   * Fixed provided saved game filenames being ignored when requesting to
     save a MP game due to a network or OOS error (bug #19562)
   * Fixed bug #19538: Filters matching 0 saved games cause crash
   * Clicking a unit does not reveal adjacent hidden units (bug #19381).
 * Whiteboard
   * Fixed bug #19626: segfaults on window resize
   * Fixed bug #19369: Using planning mode can cause losing ability to move my units
   * Fixed bug #19408: Crash shortly after executing invalid multi-turn move
   * Fixed bug #19581: Leader can still move after a planned recall
   * Shortened all context menu items
   * Fixed bug #19619 : In local games, units keep ghosted appearance during opponent's turn
   * Fixed bug #19613 : Multiple attacks after planning attacks in whiteboard
   * Fixed bug #19618: Problems with ending turn with impossible moves
   * Fixed bug #19615: Can see part of opponents' planned moves in local multiplayer game
 * WML engine:
   * new action tag: [clear_menu_item] id=...
   * new key: [set_menu_item][command]delayed_variable_substitution=yes|no
   * Removed support for the deprecated "colour=", "debug_border_colour=",
     and [colour_adjust]
   * Fixed bug #18996: Increase random number generation range.
   * Made it possible to disable the credits screen at the end of a campaign
     by specifying end_credits=no in the final [endlevel] action, or in the
     [campaign] definition (defaults to yes)
   * Added [modify_side] color= attribute, which changes a side's team color
     range (feature/bug #18772)
   * Removed support for the deprecated [removeitem]
   * Implemented ~BLEND(r,g,b,o) image path function, which blends the image
     with a specified RGB color according to certain opacity (factor or
     percentage) (feature/bug #11590)
   * [find_path] now returns a "hexes" key instead of a "length" key inside
     the output array